2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-10-27  Andras Varga

	* cmdenv.cc: minor ajustment: makeOptionsEffective() should be called 
	right after readPerRunOptions()

2004-10-25  Andras Varga
	
	* cmdenv.cc: updated for info() and fullPath() signature changes 
	(see include/ChangeLog)

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-07-10  Andras Varga

	* cmdenv.cc/h: now it's possible to control which modules' ev<< output
	Cmdenv prints when run with express-mode=false and module-messages=
	true. The configuration is: [Cmdenv]/<modulepath>.ev-output=true/false.
	An example which enables only output from modules named "tcpdump":
	  [Cmdenv]
	  module-messages=true
	  **.tcpdump.ev-output=true
	  **.ev-output=false
	ev<< in finish() is always fully printed.

2004-07-06  Andras Varga

	* cmdenv.cc: fixed Speedometer usage; added milliseconds to elapsed
	time. FIXME calculated + speedometer values don't correspond because
	the two call ftime() independently

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-02-23  Andras Varga

	* cmdenv.cc: new omnetpp.ini option:
	    event-banner-details= true/false (default: false).
	It is in effect with normal mode (express-mode=false), and causes
        elapsed time and number of messages (created,present, in FES) to be
        printed in a second line below the event banner. Format:
           Elapsed: 131s (2m 11s)  Messages: created: 45 present: 45 in FES: 18
        Also changed the format of elapsed time display in express mode:
        prints it in seconds as well.

2004-02-11  Andras Varga

	* cmdenv.cc: propagated semantic change in getNextEvent()'s and